2022-11-30  Jacob Bachmeyer  <jcb@gnu.org>

	* testsuite/libdejagnu/unit.exp: Rename this...
	* testsuite/libdejagnu/harness.exp: ...to this.

	* doc/dejagnu.texi (C++ unit testing API): Document recent
	improvements and the rest of the C++ API.

	* dejagnu.h (TestState::TestState): Only perform initialization
	when the first TestState object is constructed.
	(DG): Add global TestState object.

	* dejagnu.h (DG__endmsg): New function, called using atexit().
	(endmsg_registered, TestState_count): Add fields to DG__status.
	(DG__init): New function, to register DG__endmsg.
	(pass, xpass, fail, xfail, untested, unresolved, unsupported)
	(note): Call DG__init to ensure libdejagnu initialization.
	(totals): Move "END" message to DG__endmsg.
	(TestState::TestState): Consider DG__endmsg registered when a
	TestState object is constructed.
	(TestState::TestState, TestState::~TestState): Track number of
	live TestState objects in global status structure.
	(TestState::~TestState): Call totals() and emit "END" message only
	when the last TestState object is destroyed.

	* dejagnu.h (outstate): Remove.
	(TestState::pass, TestState::xpass, TestState::fail)
	(TestState::xfail, TestState::untested, TestState::unresolved)
	(TestState::unsupported, TestState::note): Remove support for
	overriding protocol tag lines.
	(outstate_list): Rename this...
	(DG__outstate_list): ...to this to mark it as internal.
	(teststate): Rename this...
	(DG_teststate): ...to this to avoid name collisions with user code.
	(TestState::TestState): Sort lines by length.

	* dejagnu.h (buffer): Remove this variable.
	(pass, xpass, fail, xfail, untested, unresolved, unsupported)
	(note): Replace use of buffer and vsnprintf with flockfile,
	multiple writes, and funlockfile in all functions.

	* dejagnu.h (DG__status): New struct for test counters.
	(passed, failed, xpassed, xfailed, untest, unresolve, unsupport):
	Move all counters into new struct, changing all functions.
