@@ -1,4 +1,4 @@
-# Copyright (C) 1995-2016, 2018, 2020 Free Software Foundation, Inc.
+# Copyright (C) 1995-2016, 2018, 2020, 2022 Free Software Foundation, Inc.
 #
 # This file is part of DejaGnu.
 #
@@ -25,35 +25,56 @@ load_lib util-defs.exp
 runtest_setup_nested_testsuite
 
 set tests {
-    { stats pass "expected passes\[ \t\]+1\n" }
-    { stats fail "unexpected failures\[ \t\]+1\n" }
-    { stats xpass "unexpected successes\[ \t\]+1\n" }
-    { stats xfail "expected failures\[ \t\]+1\n" }
-    { stats kpass "unknown successes\[ \t\]+1\n" }
-    { stats kfail "known failures\[ \t\]+1\n" }
-    { stats untested "untested testcases\[ \t\]+1\n" }
-    { stats unresolved "unresolved testcases\[ \t\]+1\n" }
-    { stats unsupported "unsupported tests\[ \t\]+1\n" }
+    { stats 0 0 pass "expected passes\[ \t\]+1\n" }
+    { stats 0 0 fail "unexpected failures\[ \t\]+1\n" }
+    { stats 0 0 xpass "unexpected successes\[ \t\]+1\n" }
+    { stats 0 0 xfail "expected failures\[ \t\]+1\n" }
+    { stats 0 0 kpass "unknown successes\[ \t\]+1\n" }
+    { stats 0 0 kfail "known failures\[ \t\]+1\n" }
+    { stats 0 0 untested "untested testcases\[ \t\]+1\n" }
+    { stats 0 0 unresolved "unresolved testcases\[ \t\]+1\n" }
+    { stats 0 0 unsupported "unsupported tests\[ \t\]+1\n" }
 
-    { unit pass "expected passes\[ \t\]+1\n" }
-    { unit fail "unexpected failures\[ \t\]+1\n" }
-    { unit xpass "unexpected successes\[ \t\]+1\n" }
-    { unit xfail "expected failures\[ \t\]+1\n" }
-    { unit untested "untested testcases\[ \t\]+1\n" }
-    { unit unresolved "unresolved testcases\[ \t\]+1\n" }
-    { unit unsupported "unsupported tests\[ \t\]+1\n" }
+    { stats 1 0 pass "unresolved testcases\[ \t\]+1\n" }
+    { stats 1 0 fail "unresolved testcases\[ \t\]+1\n" }
+    { stats 1 0 xpass "unresolved testcases\[ \t\]+1\n" }
+    { stats 1 0 xfail "unresolved testcases\[ \t\]+1\n" }
+    { stats 1 0 kpass "unresolved testcases\[ \t\]+1\n" }
+    { stats 1 0 kfail "unresolved testcases\[ \t\]+1\n" }
+    { stats 1 0 untested "unresolved testcases\[ \t\]+1\n" }
+    { stats 1 0 unresolved "unresolved testcases\[ \t\]+1\n" }
+    { stats 1 0 unsupported "unresolved testcases\[ \t\]+1\n" }
+
+    { stats 0 4 pass "unresolved testcases\[ \t\]+1\n" }
+    { stats 0 4 fail "unresolved testcases\[ \t\]+1\n" }
+    { stats 0 4 xpass "unresolved testcases\[ \t\]+1\n" }
+    { stats 0 4 xfail "unresolved testcases\[ \t\]+1\n" }
+    { stats 0 4 kpass "unresolved testcases\[ \t\]+1\n" }
+    { stats 0 4 kfail "unresolved testcases\[ \t\]+1\n" }
+    { stats 0 4 untested "unresolved testcases\[ \t\]+1\n" }
+    { stats 0 4 unresolved "unresolved testcases\[ \t\]+1\n" }
+    { stats 0 4 unsupported "unresolved testcases\[ \t\]+1\n" }
+
+    { unit 0 0 pass "expected passes\[ \t\]+1\n" }
+    { unit 0 0 fail "unexpected failures\[ \t\]+1\n" }
+    { unit 0 0 xpass "unexpected successes\[ \t\]+1\n" }
+    { unit 0 0 xfail "expected failures\[ \t\]+1\n" }
+    { unit 0 0 untested "untested testcases\[ \t\]+1\n" }
+    { unit 0 0 unresolved "unresolved testcases\[ \t\]+1\n" }
+    { unit 0 0 unsupported "unsupported tests\[ \t\]+1\n" }
 }
 
 foreach t $tests {
     if { [util_test $RUNTEST \
 	    "--local_init nested-init.exp --tool stat\
-		STATS_TEST=[lindex $t 1] [lindex $t 0]-sub.exp" \
+		ERROR_COUNT=[lindex $t 1] WARNING_COUNT=[lindex $t 2]\
+		STATS_TEST=[lindex $t 3] [lindex $t 0]-sub.exp" \
 	    "" \
 	    [lindex $t 2]] } {
-	fail "[lindex $t 0]/[lindex $t 1]"
+	fail [join [lrange $t 0 3] /]
 	runtest_copy_nested_testsuite_log stat
     } else {
-	pass "[lindex $t 0]/[lindex $t 1]"
+	pass [join [lrange $t 0 3] /]
     }
 }
 
